# RagApp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  pyproject.toml
src/: streamlit_app.py
src/chat/: conversation_handler.py  openai_client.py
src/database/: vector_store.py
src/document_processing/: pdf_handler.py  pdf_image_extractor.py
src/prompts/: prompts.py
streamlit_chroma_db/129a8ae4-af24-4a7f-a5df-a4e03c0ada47/: index_metadata.pickle
streamlit_chroma_db/84c654e3-d90d-4d82-9539-9767148334bb/: index_metadata.pickle
